fix: adjust font size and line height for better readability; update button margins for improved layout

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -2269,10 +2269,10 @@ body {
 
             p {
                 font-family: "Stella Demo";
-                font-size: 50px;
+                font-size: 35px;
                 color: #14477a;
                 margin: 0;
-                line-height: 1;
+                line-height: 0.7;
                 width: 100%;
                 display: block;
                 text-align: center;
@@ -2415,7 +2415,7 @@ body {
 
                 .button-container {
                     width: 22vw;
-                    height: 24.5vw;
+                    height: 100%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -2440,6 +2440,7 @@ body {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    margin-bottom: 0 !important;
                 }
 
                 .items {
@@ -2606,7 +2607,7 @@ body {
     color: #fff;
     font-size: 3vw;
     border-radius: 40px;
-    padding: 1vh 3vw;
+    padding: 15px 3vw;
     border: none;
     outline: none;
     cursor: pointer;
